@@ -7,10 +7,6 @@ import edu.umd.cs.findbugs.BugReporter;
 import edu.umd.cs.findbugs.StatelessDetector;
 import edu.umd.cs.findbugs.bcel.OpcodeStackDetector;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -18,41 +14,33 @@ public class DontUseFloatsAsLoopCounters extends OpcodeStackDetector implements 
 
     private final BugReporter bugReporter;
 
-    private static final Map<Integer, Integer> FLOAT_LOADERS;
-    static {
-        Map<Integer, Integer> tmp = new HashMap<>();
-        tmp.put((int) Const.FLOAD, 2);
-        tmp.put((int) Const.FLOAD_0, 1);
-        tmp.put((int) Const.FLOAD_1, 1);
-        tmp.put((int) Const.FLOAD_2, 1);
-        tmp.put((int) Const.FLOAD_3, 1);
-        tmp.put((int) Const.DLOAD, 2);
-        tmp.put((int) Const.DLOAD_0, 1);
-        tmp.put((int) Const.DLOAD_1, 1);
-        tmp.put((int) Const.DLOAD_2, 1);
-        tmp.put((int) Const.DLOAD_3, 1);
-        FLOAT_LOADERS = Collections.unmodifiableMap(tmp);
-    }
+    private static final Map<Integer, Integer> FLOAT_LOADERS = Map.of(
+            (int) Const.FLOAD, 2,
+            (int) Const.FLOAD_0, 1,
+            (int) Const.FLOAD_1, 1,
+            (int) Const.FLOAD_2, 1,
+            (int) Const.FLOAD_3, 1,
+            (int) Const.DLOAD, 2,
+            (int) Const.DLOAD_0, 1,
+            (int) Const.DLOAD_1, 1,
+            (int) Const.DLOAD_2, 1,
+            (int) Const.DLOAD_3, 1);
 
-    private static final Map<Integer, Integer> FLOAT_CONSTANT_PUSHERS;
-    static {
-        Map<Integer, Integer> tmp = new HashMap<>();
-        tmp.put((int) Const.FCONST_1, 1);
-        tmp.put((int) Const.FCONST_2, 1);
-        tmp.put((int) Const.DCONST_1, 1);
-        tmp.put((int) Const.LDC, 2);
-        tmp.put((int) Const.LDC_W, 3);
-        tmp.put((int) Const.LDC2_W, 3);
-        FLOAT_CONSTANT_PUSHERS = Collections.unmodifiableMap(tmp);
-    }
+    private static final Map<Integer, Integer> FLOAT_CONSTANT_PUSHERS = Map.of(
+            (int) Const.FCONST_1, 1,
+            (int) Const.FCONST_2, 1,
+            (int) Const.DCONST_1, 1,
+            (int) Const.LDC, 2,
+            (int) Const.LDC_W, 3,
+            (int) Const.LDC2_W, 3);
 
-    private static final Set<Integer> FLOAT_COMPARERS = new HashSet<>(Arrays.asList(
+    private static final Set<Integer> FLOAT_COMPARERS = Set.of(
             (int) Const.FCMPG,
             (int) Const.FCMPL,
             (int) Const.DCMPG,
-            (int) Const.DCMPL));
+            (int) Const.DCMPL);
 
-    private static final Set<Integer> FLOAT_STORERS = new HashSet<>(Arrays.asList(
+    private static final Set<Integer> FLOAT_STORERS = Set.of(
             (int) Const.FSTORE,
             (int) Const.FSTORE_0,
             (int) Const.FSTORE_1,
@@ -62,13 +50,13 @@ public class DontUseFloatsAsLoopCounters extends OpcodeStackDetector implements 
             (int) Const.DSTORE_0,
             (int) Const.DSTORE_1,
             (int) Const.DSTORE_2,
-            (int) Const.DSTORE_3));
+            (int) Const.DSTORE_3);
 
-    private static final Set<Integer> FLOAT_ADDITIVE_OPS = new HashSet<>(Arrays.asList(
+    private static final Set<Integer> FLOAT_ADDITIVE_OPS = Set.of(
             (int) Const.FADD,
             (int) Const.FSUB,
             (int) Const.DADD,
-            (int) Const.DSUB));
+            (int) Const.DSUB);
 
     public DontUseFloatsAsLoopCounters(BugReporter bugReporter) {
         this.bugReporter = bugReporter;
